Run express generator

--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "eatme-project",
-  "version": "1.0.0",
-  "description": "recipe app",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MichaelDong32/eatme-project.git"
-  },
-  "keywords": [],
-  "author": "Mike Dong",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MichaelDong32/eatme-project/issues"
-  },
-  "homepage": "https://github.com/MichaelDong32/eatme-project#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "hbs": "~4.0.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
